test_programs/compile_failure/turbofish_after_self_not_allowed/src/main.nr
struct Foo {}

impl Foo {
    fn new() -> Self {
        Self::<hello> {}
    }
}
